<resources>
    <string name="app_name">Firestore Journal</string>
    <string name="title_text">Journal App</string>
    <string name="grateful_text">What are you grateful for today?</string>
    <string name="get_started_text">Get Started</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="or_text">Or</string>
    <string name="create_account_text">Create Account</string>
    <string name="username_hint">Username</string>
</resources>